added 1124 changes. tested

--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "highcharts": "latest",
     "js-grid": "latest",
     "jquery-colorbox": "latest",
-    "jquery-bar-rating": "latest"
+    "jquery-bar-rating": "latest",
+    "d3": "latest"
   }
 }
